# device_logger

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  buf.gen.yaml  buf.yaml  device logger.txt  go.mod  go.sum  job.report.json
api/proto/devicelog/v1/: log.proto  query.proto
clients/: README.md
clients/nest/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
clients/nest/src/: app.module.ts  config.ts  e2e.ts  main.ts
clients/nest/src/devlog/: devlog.controller.ts  devlog.module.ts  entry.spec.ts  entry.ts  observer.service.ts  proto.ts  publisher.service.ts
clients/node/: package-lock.json  package.json
clients/node/src/: config.js  entry.js  index.js  observer.js  proto.js  publisher.js
clients/node/test/: entry.test.js
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/devlog_client/: __init__.py  cli.py  config.py  entry.py  observer.py  publisher.py  service.py
clients/python/django_app/: manage.py
clients/python/django_app/devlog_web/: settings.py  urls.py  views.py  wsgi.py
clients/python/fastapi_app/: main.py
clients/python/flask_app/: app.py
clients/python/scripts/: gen_proto.sh
clients/python/tests/: conftest.py  test_e2e.py  test_entry.py
cmd/devlogd/: main.go
cmd/licensed/: main.go
cmd/lictl/: main.go
cmd/logctl/: grpc.go  main.go  sim.go
config/: devlogd.example.yaml
deploy/: Dockerfile  devlogd.compose.yaml  docker-compose.yml
deploy/alloy/: config.alloy
deploy/embed/: CMakeLists.txt  README.md  devlogd_supervisor.cpp  devlogd_supervisor.hpp  example_main.cpp
deploy/grafana/dashboards/: devlogd.json
deploy/prometheus/: prometheus.yml
docs/: COMPONENTS.md  DESIGN.md  ELITE_ENGINEERING.md  GO_CONCEPTS.md  MANUAL.md  TESTING.md
docs/components/: 01-proto-contract.md  02-config.md  03-telemetry.md  04-sign.md  05-license.md  06-hot.md  07-cold.md  08-archive.md  09-ingest.md  10-query.md  11-broker.md  12-grpcapi.md  13-cli-tools.md  14-composition-root.md  README.md
examples/cpp/publisher/: CMakeLists.txt  README.md  main.cpp
internal/archive/: archiver.go  archiver_test.go
internal/bootstrap/: bootstrap.go  bootstrap_test.go  minio.go  redis.go
internal/broker/: broker.go  hooks.go
internal/cold/: cold_test.go  segment.go  store.go
internal/config/: config.go  config_test.go  tls.go
internal/grpcapi/: server.go  service.go  service_test.go
internal/hot/: store.go  store_test.go
internal/ingest/: hub.go  pipeline.go  pipeline_test.go
internal/license/: license.go  license_test.go  manager.go  online.go  server.go
internal/query/: engine.go  engine_test.go
internal/sign/: keys.go  sign.go  sign_test.go
internal/telemetry/: http.go  logging.go  metrics.go
postman/: DeviceLogger.postman_collection.json  DeviceLogger.postman_environment.json  README.md  run-integration.sh
tools/gencerts/: main.go
(+1 files in other folders)
